virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: knative-gloo-grpc
  namespace: gloo-system # important! create the VirtualService on the gloo-system
spec:
  virtualHost:
    routes:
    - matcher:
        methods:
        - POST
        prefix: /submit/
      routeAction:
        single:
          destinationSpec:
            grpc:
              function: Submit
              package: api
              parameters:
                path: /submit/{document}
              service: HubService
          upstream:
            name: CHANGEME
            namespace: gloo-system
